# incubator-teaclave-trustzone-sdk

./: .licenserc.yaml  environment  setup.sh
.github/workflows/: build_test_qemu.yml  build_test_qemu_image.yml  ci.yml  reuse_build_test_qemu.yml  reuse_build_test_qemu_image.yml  reuse_test.yml
.patches/test_qemu/: README.md  arm-atf_expand_secure_memory.patch  optee-build_expand_memory.patch  optee-build_ipv6_support.patch  qemu-qemu_expand_secure_memory.patch
docs/: migrating-to-new-building-env.md  writing-rust-tas-using-optee-utee-build.md
examples/digest-rs/ta/: build.rs
examples/http-rs/: uuid.txt
examples/mnist-rs/: Makefile  README.md  rust-toolchain.toml
optee-utee-build/: Cargo.toml
optee-utee-build/src/: builder.rs  code_generator.rs  error.rs  lib.rs  linker.rs  ta.rs  ta_config.rs  ta_static.rs
optee-utee-build/test_files/: test_edition_2024_result.rs  test_edition_before_2024_result.rs
optee-utee/src/: extension.rs
projects/deep_learning/: Makefile  README.md
projects/machine-learning/: Makefile  rust-toolchain.toml
projects/machine-learning/ta/: Cargo.toml
projects/machine-learning/ta/crates/inference/: Cargo.toml  Makefile  build.rs
projects/machine-learning/ta/crates/inference/src/: main.rs
projects/machine-learning/ta/crates/model/: Cargo.toml
projects/machine-learning/ta/crates/model/src/: conv.rs  mlp.rs  model.rs  util.rs
projects/machine-learning/ta/crates/train/: Cargo.toml  Makefile  build.rs
projects/machine-learning/ta/crates/train/src/: main.rs  trainer.rs
tests/: optee-qemuv8.sh
(+80 files in other folders)
