[package]
name = "optee-utee-build"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
edition = "2018"
description = "Build tool for TA"

[dependencies]
uuid = "1.11.0"
quote = "1.0.37"
proc-macro2 = "1.0.92"
syn = "2.0.90"
prettyplease = "0.2.25"
