[workspace]
resolver = "2"

members = [
    "crates/*",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.4.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]

[workspace.dependencies]
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }
optee-utee-build = { path = "../../../optee-utee-build" }

proto = { path = "../proto" }

bytemuck = { version = "1.21.0", features = ["min_const_generics"] }
burn = { path = "/workspace/zehui/burn/crates/burn", default-features = false, features = ["ndarray", "autodiff"] }
spin = "0.9.8"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }


[profile.release]
panic = "abort"
lto = true
opt-level = 1
